修复Vercel路由配置 - 为/r/:shortCode添加明确的路由规则

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
       "destination": "/vite.svg"
     },
     {
-      "source": "(.*)",
+      "source": "/r/:shortCode",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
