Fix: Simplify Vercel routing config to resolve 404 errors for dynamic QR codes

--- a/vercel.json
+++ b/vercel.json
@@ -3,19 +3,7 @@
   "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
-    },
-    {
-      "source": "/vite.svg",
-      "destination": "/vite.svg"
-    },
-    {
-      "source": "/r/:shortCode",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/(.*)",
+      "source": "(.*)",
       "destination": "/index.html"
     }
   ],
